@@ -122,22 +122,22 @@
     <SKIP_INTEGRATION_TESTS>true</SKIP_INTEGRATION_TESTS>
     <!-- Configuration for unit/integration tests section 1 of 3 (properties) ENDS HERE.-->
     <avro.version>1.9.2</avro.version>
-    <parquet.version>1.11.1</parquet.version>
+    <parquet.version>1.11.2</parquet.version>
     <helix.version>1.0.4</helix.version>
     <zkclient.version>0.7</zkclient.version>
     <jackson.version>2.12.7</jackson.version>
     <zookeeper.version>3.6.3</zookeeper.version>
     <async-http-client.version>2.12.3</async-http-client.version>
-    <jersey.version>2.35</jersey.version>
+    <jersey.version>2.39</jersey.version>
     <grizzly.version>2.4.4</grizzly.version>
     <hk2.version>2.6.1</hk2.version>
-    <swagger.version>1.6.6</swagger.version>
+    <swagger.version>1.6.9</swagger.version>
     <hadoop.version>2.10.1</hadoop.version>
     <antlr.version>4.6</antlr.version>
     <jsonpath.version>2.7.0</jsonpath.version>
-    <jsonsmart.version>2.4.7</jsonsmart.version>
+    <jsonsmart.version>2.4.10</jsonsmart.version>
     <quartz.version>2.3.2</quartz.version>
-    <calcite.version>1.29.0</calcite.version>
+    <calcite.version>1.30.0</calcite.version>
     <lucene.version>8.2.0</lucene.version>
     <reflections.version>0.9.11</reflections.version>
     <!-- commons-configuration, hadoop-common, hadoop-client use commons-lang -->
@@ -148,17 +148,19 @@
     <commons-net.version>3.1</commons-net.version>
     <!-- helix-core, spark-core use libraries from io.dropwizard.metrics -->
     <dropwizard-metrics.version>4.2.2</dropwizard-metrics.version>
-    <snappy-java.version>1.1.8.2</snappy-java.version>
+    <snappy-java.version>1.1.10.1</snappy-java.version>
     <zstd-jni.version>1.5.2-3</zstd-jni.version>
     <lz4-java.version>1.8.0</lz4-java.version>
     <log4j.version>2.17.1</log4j.version>
-    <netty.version>4.1.79.Final</netty.version>
+    <netty.version>4.1.94.Final</netty.version>
     <reactivestreams.version>1.0.3</reactivestreams.version>
-    <jts.version>1.16.1</jts.version>
-    <h3.version>4.0.0</h3.version>
+    <jts.version>1.19.0</jts.version>
+    <h3.version>4.1.1</h3.version>
     <jmh.version>1.26</jmh.version>
     <audienceannotations.version>0.13.0</audienceannotations.version>
-
+    <clp-ffi.version>0.4.3</clp-ffi.version>
+    <aws.sdk.version>2.20.94</aws.sdk.version>
+    <joda-time.version>2.12.5</joda-time.version>
     <!-- Sets the VM argument line used when unit tests are run. -->
     <argLine>-Xms4g -Xmx4g</argLine>
 
@@ -167,8 +169,8 @@
     To change kafka connector dependency, we only need to update this version number config.
     TODO: figure out a way to inject kafka dependency instead of explicitly setting the kafka module dependency -->
     <kafka.version>2.0</kafka.version>
-    <protobuf.version>3.19.2</protobuf.version>
-    <grpc.version>1.41.0</grpc.version>
+    <protobuf.version>3.22.0</protobuf.version>
+    <grpc.version>1.53.0</grpc.version>
     <confluent.version>5.5.3</confluent.version>
 
     <!-- Checkstyle violation prop.-->
@@ -249,6 +251,23 @@
           </plugins>
         </pluginManagement>
       </build>
+      <dependencyManagement>
+        <!-- The updated version of these plugins don't work on Java 8 -->
+        <dependencies>
+          <dependency>
+            <groupId>nl.jqno.equalsverifier</groupId>
+            <artifactId>equalsverifier</artifactId>
+            <version>3.6</version>
+            <scope>test</scope>
+          </dependency>
+          <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.12.4</version>
+            <scope>test</scope>
+          </dependency>
+        </dependencies>
+      </dependencyManagement>
     </profile>
     <profile>
       <id>other-jdk-maven-compiler-plugin</id>
@@ -422,7 +441,7 @@
       <dependency>
         <groupId>nl.jqno.equalsverifier</groupId>
         <artifactId>equalsverifier</artifactId>
-        <version>3.6</version>
+        <version>3.14.1</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -463,17 +482,33 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>20.0</version>
+        <version>32.0.1-jre</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.google.errorprone</groupId>
+            <artifactId>error_prone_annotations</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>checker-qual</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.google.auto.service</groupId>
+        <artifactId>auto-service</artifactId>
+        <version>1.0.1</version>
+        <optional>true</optional> <!-- This is only needed at compilation time as an annotation processor -->
       </dependency>
       <dependency>
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
-        <version>1.2</version>
+        <version>1.5.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.11</version>
+        <version>3.12.0</version>
       </dependency>
       <dependency>
         <groupId>commons-collections</groupId>
@@ -523,7 +558,7 @@
       <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>2.10.5</version>
+        <version>${joda-time.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.avro</groupId>
@@ -649,7 +684,7 @@
       <dependency>
         <groupId>org.yaml</groupId>
         <artifactId>snakeyaml</artifactId>
-        <version>1.33</version>
+        <version>2.0</version>
       </dependency>
       <dependency>
         <groupId>org.xerial.larray</groupId>
@@ -854,29 +889,9 @@
         <version>1.5.9</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-core-asl</artifactId>
-        <version>1.9.13</version>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-mapper-asl</artifactId>
-        <version>1.9.13</version>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-jaxrs</artifactId>
-        <version>1.9.13</version>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-xc</artifactId>
-        <version>1.9.13</version>
-      </dependency>
-      <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>swagger-ui</artifactId>
-        <version>3.23.11</version>
+        <version>5.1.0</version>
       </dependency>
       <dependency>
         <groupId>com.clearspring.analytics</groupId>
@@ -886,7 +901,7 @@
       <dependency>
         <groupId>org.apache.datasketches</groupId>
         <artifactId>datasketches-java</artifactId>
-        <version>1.2.0-incubating</version>
+        <version>4.1.0</version>
       </dependency>
       <dependency>
         <groupId>com.tdunning</groupId>
@@ -979,7 +994,7 @@
       <dependency>
         <groupId>com.jcabi</groupId>
         <artifactId>jcabi-log</artifactId>
-        <version>0.17.1</version>
+        <version>0.18.1</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
@@ -1100,7 +1115,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>3.9.0</version>
+        <version>5.3.1</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -1117,12 +1132,17 @@
       <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
-        <version>1.4.193</version>
+        <version>2.2.220</version>
       </dependency>
       <dependency>
         <groupId>com.github.jnr</groupId>
         <artifactId>jnr-posix</artifactId>
-        <version>3.0.12</version>
+        <version>3.1.15</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.jnr</groupId>
+        <artifactId>jnr-constants</artifactId>
+        <version>0.10.3</version>
       </dependency>
       <dependency>
         <groupId>info.picocli</groupId>
@@ -1204,11 +1224,65 @@
         <artifactId>h3</artifactId>
         <version>${h3.version}</version>
       </dependency>
-
       <dependency>
         <groupId>com.github.seancfoley</groupId>
         <artifactId>ipaddress</artifactId>
         <version>5.3.4</version>
+      </dependency>
+      <dependency>
+        <groupId>com.mercateo</groupId>
+        <artifactId>test-clock</artifactId>
+        <version>1.0.2</version>
+        <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <!-- Older versions fail with Java >= 16 -->
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.28</version>
+      </dependency>
+
+      <dependency>
+        <groupId>net.openhft</groupId>
+        <artifactId>posix</artifactId>
+        <version>2.23.2</version>
+      </dependency>
+      <dependency>
+        <groupId>net.openhft</groupId>
+        <artifactId>chronicle-core</artifactId>
+        <version>2.24ea16</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm</artifactId>
+        <version>9.3</version>
+      </dependency>
+      <dependency>
+        <groupId>net.java.dev.jna</groupId>
+        <artifactId>jna</artifactId>
+        <version>5.5.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.yscope.clp</groupId>
+        <artifactId>clp-ffi</artifactId>
+        <version>${clp-ffi.version}</version>
+      </dependency>
+
+      <!-- This configures all aws sdk dependencies. -->
+      <!-- See https://reflectoring.io/maven-bom/ to understand how this work -->
+      <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>bom</artifactId>
+        <version>${aws.sdk.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -1342,13 +1416,22 @@
             </systemPropertyVariables>
             <trimStackTrace>false</trimStackTrace>
             <reportFormat>plain</reportFormat>
+            <argLine>
+              ${argLine}
+              --add-opens=java.base/java.nio=ALL-UNNAMED
+              --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+              --add-opens=java.base/java.lang=ALL-UNNAMED
+              --add-opens=java.base/java.util=ALL-UNNAMED
+              --add-exports=java.base/jdk.internal.util.random=ALL-UNNAMED
+              --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
           <!-- Note that 3.0.0, while newer, has bugs w/provided transitive dependencies -->
-          <version>3.0.0-M3</version>
+          <version>3.2.1</version>
           <executions>
             <execution>
               <id>enforce-dependency-convergence</id>
@@ -1367,7 +1450,7 @@
         <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>4.0</version>
+          <version>4.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -1555,7 +1638,7 @@
       <plugin>
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
-        <version>4.0</version>
+        <version>4.2</version>
         <configuration>
           <header>${pinot.root}/HEADER</header>
           <headerDefinitions>
@@ -1570,6 +1653,7 @@
             <exclude>**/*.generated</exclude>
             <exclude>**/*.json</exclude>
             <exclude>**/*.schema</exclude>
+            <exclude>**/*.sql</exclude>
 
             <!-- JDBC Drivers -->
             <exclude>**/java.sql.*</exclude>
@@ -1683,6 +1767,7 @@
             <exclude>**/*.generated</exclude>
             <exclude>**/*.json</exclude>
             <exclude>**/*.schema</exclude>
+            <exclude>**/*.sql</exclude>
 
             <!-- JDBC Drivers -->
             <exclude>**/java.sql.*</exclude>
@@ -1706,6 +1791,7 @@
             <exclude>**/*.v1</exclude>
             <exclude>**/*.v2</exclude>
             <exclude>**/appAssemblerScriptTemplate</exclude>
+            <exclude>doap_Pinot.rdf</exclude>
 
             <!-- js, css files that are exact copies of the third-party works. In this case, the original header has to
             be kept. Please refer to 'Treatment of Third-party works' in https://www.apache.org/legal/src-headers.html
